# plasma-samegame

./: .flatpak-manifest.json  .gitignore  .kde-ci.yml  CMakeLists.txt  org.kde.samegame.appdata.xml  org.kde.samegame.desktop
package/: metadata.desktop
package/contents/ui/samegame4/: samegame.qml
src/: CMakeLists.txt  main.cpp  resources.qrc
src/contents/ui/: BoomBlock.qml  MainPage.qml  samegame.qml
